Fixed overflow / horizontal scroll.

--- a/styles/main.css
+++ b/styles/main.css
@@ -255,6 +255,7 @@ div > h1 {
     margin: 0 auto;
     height: 100vh;
     width: 100vw;
+    box-sizing: border-box;
   }
 
   .toggled-navbar ul {
