--- a/styles/toggled-navbar.css
+++ b/styles/toggled-navbar.css
@@ -45,6 +45,7 @@
     height: 100vh;
     width: 100vw;
     padding: 24px 48px;
+    box-sizing: border-box;
   }
 
   .toggled-navbar ul {
